fixed code and github links not showing up on projects on mobile

--- a/frontend_react/src/container/Work/Work.scss
+++ b/frontend_react/src/container/Work/Work.scss
@@ -136,6 +136,11 @@
       color: var(--white-color);
     }
   }
+
+  @media screen and (max-width: 400px) {
+    opacity: .75;
+
+  }
 }
 
 .app__work-content {
